force-app/main/default/objects/payRecord__c/payRecord__c.object-meta.xml
<CustomObject>
    <label>报销记录</label>
    <nameField>
        <label>报销记录名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>