force-app/main/default/objects/payRecord__c/fields/ApproveStatu__c.field-meta.xml
<CustomField>
    <fullName>ApproveStatu__c</fullName>
    <label>审批状态</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>草稿</fullName>
                <default>true</default>
                <label>草稿</label>
            </value>
            <value>
                <fullName>审批中</fullName>
            </value>
            <value>
                <fullName>审批通过</fullName>
            </value>
            <value>
                <fullName>审批未通过</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>