force-app/main/default/objects/payRecord__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <description>月份</description>
    <label>月份</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一月</fullName>
                <default>true</default>
                <label>一月</label>
            </value>
            <value>
                <fullName>二月</fullName>
            </value>
            <value>
                <fullName>三月</fullName>
            </value>
            <value>
                <fullName>四月</fullName>
            </value>
            <value>
                <fullName>五月</fullName>
            </value>
            <value>
                <fullName>六月</fullName>
            </value>
            <value>
                <fullName>七月</fullName>
            </value>
            <value>
                <fullName>八月</fullName>
            </value>
            <value>
                <fullName>九月</fullName>
            </value>
            <value>
                <fullName>十月</fullName>
            </value>
            <value>
                <fullName>十一月</fullName>
            </value>
            <value>
                <fullName>十二月</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>