force-app/main/default/objects/payRecord__c/fields/payCount__c.field-meta.xml
<CustomField>
    <fullName>payCount__c</fullName>
    <description>报销总金额</description>
    <inlineHelpText>1</inlineHelpText>
    <label>报销金额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>