force-app/main/default/objects/payRecord__c/fields/userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <description>用户名</description>
    <label>用户名称</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>