force-app/main/default/objects/payRecord__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>年份</label>
    <length>20</length>
    <type>Text</type>
</CustomField>